--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "nanoid": "^3.1.20",
+    "p5": "^1.2.0",
     "peer-server": "^1.1.2",
-    "socketio": "^1.0.0",
+    "socket.io": "^3.1.2",
     "timesync": "^1.0.8"
   },
   "devDependencies": {
