--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "armory_pests",
+  "name": "armory-pests",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -8,13 +8,12 @@
     "start": "npm run build && node dist/main.js"
   },
   "author": "wavy",
-  "license": "ISC",
+  "license": "GPL",
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "nanoid": "^3.1.20",
     "p5": "^1.2.0",
-    "peer-server": "^1.1.2",
     "socket.io": "^3.1.2",
     "timesync": "^1.0.8"
   },
