--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "express": "^4.17.1",
     "nanoid": "^3.1.20",
     "p5": "^1.2.0",
-    "socket.io": "^3.1.2",
-    "timesync": "^1.0.8"
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.17",
