--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "nanoid": "^3.1.20",
     "p5": "^1.2.0",
+    "peer": "^0.6.1",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
